# anndata

./: .azure-pipelines.yml  .cirun.yml  .codecov.yml  .coveragerc  .cruft.json  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yml  .travis.yml  GITHUB_COMMENT_PR2277.md  LICENSE  MANIFEST.in  README.md  README.rst  biome.jsonc  conftest.py  hatch.toml  pyproject.toml  pytest.ini  requirements.txt  requirements_tests.txt  requires.txt  requires_tests.txt  setup.cfg  setup.py  test-output.xml  test.ipynb
.ci/: gpu_ci.yml
.codeboarding/: Advanced Features & Utilities.md  AnnData Core Model.md  Data Integration & Transformation.md  Data Persistence & I-O.md  Sparse Data Handling.md  on_boarding.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  enhancement-request.yml  feature_request.yml  question.yml
.github/actions/: close-stale.yml  label-stale.yml
.github/workflows/: benchmark.yml  build_gpu.yml  check-pr-milestoned.yml  check-pr.yml  close-stale.yml  codespell.yml  label-stale.yml  mypy.yml  publish.yml  pytest.yml  release.yaml  stale.yml  test-cpu.yml  test-gpu.yml  test-issue-2271.yml
anndata/: __init__.py  _config.py  _metadata.py  _settings.py  _types.py  _version.py  _warnings.py  ann_data.py  anndata.py  base.py  compat.py  core.py  html_repr.py  layer.py  layers.py  logging.py  readwrite.py  test_utils.py  tests_ann_data.py  utils.py
anndata/_core/: __init__.py  access.py  aligned_df.py  aligned_mapping.py  anndata.py  anndata_base.py  concat_obs.py  dataframe.py  descriptors.py  file_backing.py  formatting_html.py  groupby.py  html_repr.py  index.py  merge.py  raw.py  ref_path.py  repr.py  sparse_dataset.py  split.py  views.py
anndata/_io/: __init__.py  h5ad.py  merge.py  read.py  utils.py  write.py  zarr.py
anndata/_torch/: __init__.py  _dataset.py  interface.py
anndata/backwards/: __init__.py  h5sparse.py
anndata/benchmark/: asv.conf.json
anndata/compat/: __init__.py  _deprecated_dict.py  _overloaded_dict.py  exceptiongroups.py
anndata/core/: aligned_mapping.py  alignedmapping.py  anndata.py  file_backing.py  index.py  raw.py  sparse_dataset.py  sparsedataset.py  views.py
anndata/dev/: __init__.py
anndata/experimental/: __init__.py  _dispatch_io.py  merge.py
anndata/h5py/: __init__.py  h5reader.py  h5sparse.py  utils.py
anndata/mapping/: __init__.py  mapping_reader.py  sparse_mapping.py
anndata/readwrite/: __init__.py  h5ad.py  read.py  utils.py  write.py  zarr.py
anndata/testing/: __init__.py  equality.py  exceptions.py
anndata/tests/: __init__.py  ann_data.py  base.py  conftest.py  h5py_.py  hdf5-backing.py  helpers.py  layers.py  readwrite.py  test-output.xml  test_anncollection.py  test_annloader.py  test_annot.py  test_awkward.py  test_backed_sparse.py  test_base.py  test_concatenate.py  test_concatenate_disk.py  test_concatview.py  test_config.py  test_dask.py  test_dask_view_mem.py  test_deprecations.py  test_get_vector.py  test_gpu.py  test_groupby.py  test_h5py.py  test_hdf5_backing.py  test_helpers.py  test_inplace_subset.py  test_io_backwards_compat.py  test_io_conversion.py  test_io_dispatched.py  test_io_elementwise.py  test_io_partial.py  test_io_utils.py  test_io_warnings.py  test_layers.py  test_nested_adata.py  test_obsmvarm.py  (+15 more)
anndata/zarr/: __init__.py  zarrreader.py  zarrsparse.py
benchmark/: README.md  asv.conf.json  download_dataset.sh  fetch_datasets.py
benchmark/benchmarks/: readwrite.py
benchmarks/: README.md  asv.conf.json
benchmarks/benchmarks/: anndata.py  backed_hdf5.py  dataset2d.py  h5py_indexing.py  readwrite.py  sparse_dataset.py  utils.py
benchmarks/notebooks/: dask_chunk_grid_analysis.ipynb
benchmarks/scripts/: dask_chunk_grid.py
ci/: constraints.txt  gpu_ci.yml  min-constraints.txt
ci/scripts/: min-deps.py  release-notes.py  render-template.py  run-min-deps.sh  towncrier_automation.py
docs/: Makefile  Seurat_Benchmark.Rmd  _key_contributors.md  _key_contributors.rst  accessors.rst  anndata_dask_array.ipynb  api.md  api.rst  benchmark-comparitive.ipynb  benchmark-read-write.ipynb  benchmarks.md  benchmarks.rst  concatenation.md  concatenation.rst  conf.py  contributing.md  contributing.rst  fileformat-prose.md  fileformat-prose.rst  index.md  index.rst  internal-api.rst  interoperability.md  interoperability.rst  news.md  news.rst  references.md  references.rst  release-latest.rst  release-notes.rst  release_notes.rst  requirements.txt  requires.txt  roadmap.rst  tutorials.md  tutorials.rst  typing.md  zarr-v3.md
docs/extensions/: autosummary_skip_inherited.py  github_links.py  no_skip_abc_members.py  patch_autosummary.py  patch_myst_cite.py  patch_sphinx_issues.py  patch_sphinx_toolbox_autoprotocol.py  release_notes.py  skip_private_bases.py
docs/guides/: index.md  storage-intro-guide.md
docs/release-notes/: 0.10.0.md  0.10.1.md  0.10.10.md  0.10.2.md  0.10.3.md  0.10.4.md  0.10.5.md  0.10.6.md  0.10.7.md  0.10.8.md  0.10.9.md  0.11.0.md  0.11.0rc1.md  0.11.0rc2.md  0.11.0rc3.md  0.11.1.md  0.11.2.md  (+222 more)
paper/: paper.bib  paper.md
tests/: adata.csv  conftest.py  test_accessors.py  test_ann_dataset.py  test_ann_dataset_batch_collation.py  test_ann_dataset_consolidated.py  test_ann_dataset_transforms.py  test_anncollection.py  test_annloader.py  test_annot.py  test_awkward.py  test_backed_dense.py  test_backed_hdf5.py  test_backed_sparse.py  test_backend_agnostic_utils.py  test_base.py  test_concatenate.py  test_concatenate_backend_types.py  test_concatenate_disk.py  test_dask.py  test_dask_chunk_grid_script.py  test_dask_view_mem.py  test_daskarrayview_io.py  test_dataframe_backend.py  test_dataframe_protocol.py  test_deprecations.py  test_dview_write.py  test_extensions.py  test_get_vector.py  test_gpu.py  test_hdf5_backing.py  test_helpers.py  test_inplace_subset.py  test_io_backwards_compat.py  test_io_conversion.py  test_io_dask.py  test_io_dispatched.py  test_io_elementwise.py  test_io_h5_parallel.py  test_io_partial.py  (+23 more)
(+435 files in other folders)
